external/clBLAS/src/clBLAS.h

/**
 * @defgroup OVERVIEW Overview
 *
 * This library provides an implementation of the Basic Linear Algebra Subprograms levels 1, 2 and 3,
 * using OpenCL and optimized for AMD GPU hardware. It provides BLAS-1 functions
 * SWAP, SCAL, COPY, AXPY, DOT, DOTU, DOTC, ROTG, ROTMG, ROT, ROTM, iAMAX, ASUM and NRM2,
 * BLAS-2 functions GEMV, SYMV, TRMV, TRSV, HEMV, SYR, SYR2, HER, HER2, GER, GERU, GERC,
 * TPMV, SPMV, HPMV, TPSV, SPR, SPR2, HPR, HPR2, GBMV, TBMV, SBMV, HBMV and TBSV
 * and BLAS-3 functions GEMM, SYMM, TRMM, TRSM, HEMM, HERK, HER2K, SYRK and SYR2K.
 *
 * This library’s primary goal is to assist the end user to enqueue OpenCL
 * kernels to process BLAS functions in an OpenCL-efficient manner, while
 * keeping interfaces familiar to users who know how to use BLAS. All
 * functions accept matrices through buffer objects.
 *
 * This library is entirely thread-safe with the exception of the following API :
 * clblasSetup and clblasTeardown. 
 * Developers using the library can safely using any blas routine from different thread. 
 *
 * @section deprecated
 * This library provided support for the creation of scratch images to achieve better performance
 * on older <a href="http://developer.amd.com/gpu/AMDAPPSDK/Pages/default.aspx">AMD APP SDK's</a>.
 * However, memory buffers now give the same performance as buffers objects in the current SDK's.
 * Scratch image buffers are being deprecated and users are advised not to use scratch images in
 * new applications.
 */

/**
 * @defgroup TYPES clblas types
 */
/*@{*/


/** Shows how matrices are placed in memory. */
typedef enum clblasOrder_ {
    clblasRowMajor,           /**< Every row is placed sequentially */
    clblasColumnMajor         /**< Every column is placed sequentially */
} clblasOrder;
/** Used to specify whether the matrix is to be transposed or not. */
typedef enum clblasTranspose_ {
    clblasNoTrans,           /**< Operate with the matrix. */
    clblasTrans,             /**< Operate with the transpose of the matrix. */
    clblasConjTrans          /**< Operate with the conjugate transpose of
                                     the matrix. */
} clblasTranspose;
/**
 *   @brief clblas error codes definition, incorporating OpenCL error
 *   definitions.
 *
 *   This enumeration is a subset of the OpenCL error codes extended with some
 *   additional extra codes.  For example, CL_OUT_OF_HOST_MEMORY, which is
 *   defined in cl.h is aliased as clblasOutOfHostMemory.
 */
typedef enum clblasStatus_ {
    clblasSuccess                         = CL_SUCCESS,
    clblasInvalidValue                    = CL_INVALID_VALUE,
    clblasInvalidCommandQueue             = CL_INVALID_COMMAND_QUEUE,
    clblasInvalidContext                  = CL_INVALID_CONTEXT,
    clblasInvalidMemObject                = CL_INVALID_MEM_OBJECT,
    clblasInvalidDevice                   = CL_INVALID_DEVICE,
    clblasInvalidEventWaitList            = CL_INVALID_EVENT_WAIT_LIST,
    clblasOutOfResources                  = CL_OUT_OF_RESOURCES,
    clblasOutOfHostMemory                 = CL_OUT_OF_HOST_MEMORY,
    clblasInvalidOperation                = CL_INVALID_OPERATION,
    clblasCompilerNotAvailable            = CL_COMPILER_NOT_AVAILABLE,
    clblasBuildProgramFailure             = CL_BUILD_PROGRAM_FAILURE,
    /* Extended error codes */
    clblasNotImplemented         = -1024, /**< Functionality is not implemented */
    clblasNotInitialized,                 /**< clblas library is not initialized yet */
    clblasInvalidMatA,                    /**< Matrix A is not a valid memory object */
    clblasInvalidMatB,                    /**< Matrix B is not a valid memory object */
    clblasInvalidMatC,                    /**< Matrix C is not a valid memory object */
    clblasInvalidVecX,                    /**< Vector X is not a valid memory object */
    clblasInvalidVecY,                    /**< Vector Y is not a valid memory object */
    clblasInvalidDim,                     /**< An input dimension (M,N,K) is invalid */
    clblasInvalidLeadDimA,                /**< Leading dimension A must not be less than the size of the first dimension */
    clblasInvalidLeadDimB,                /**< Leading dimension B must not be less than the size of the second dimension */
    clblasInvalidLeadDimC,                /**< Leading dimension C must not be less than the size of the third dimension */
    clblasInvalidIncX,                    /**< The increment for a vector X must not be 0 */
    clblasInvalidIncY,                    /**< The increment for a vector Y must not be 0 */
    clblasInsufficientMemMatA,            /**< The memory object for Matrix A is too small */
    clblasInsufficientMemMatB,            /**< The memory object for Matrix B is too small */
    clblasInsufficientMemMatC,            /**< The memory object for Matrix C is too small */
    clblasInsufficientMemVecX,            /**< The memory object for Vector X is too small */
    clblasInsufficientMemVecY             /**< The memory object for Vector Y is too small */
} clblasStatus;